# code-rosetta-mcp

./: .gitignore  README.md  pyproject.toml
code_rosetta/: __init__.py  __main__.py  cli.py  config.py  crossref.py  graph.py  incremental.py  main.py  models.py  tools.py
code_rosetta/parsers/: __init__.py  hcl_parser.py  jinja_parser.py  python_parser.py  yaml_parser.py
